Added two sections

--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
             <div class="d-flex justify-content-between align-items-center">
                 <!-- Logo with logo title -->
                 <a class="top_logo_link" href="#">
-                <div class="logo d-flex">
-                    <img class="img-fluid align-middle" src="img/logo.png" alt="">
-                    <div class="d-flex flex-column justify-content-center">
-                        <p class="logo_title">Free-courier.<span>com</span></p>
-                        <p class="hidden-sm-down logo_subtitle">Поиск курьеров по всей России</p>
+                    <div class="logo d-flex">
+                        <img class="img-fluid align-middle" src="img/logo.png" alt="">
+                        <div class="d-flex flex-column justify-content-center">
+                            <p class="logo_title">Free-courier.<span>com</span></p>
+                            <p class="hidden-sm-down logo_subtitle">Поиск курьеров по всей России</p>
+                        </div>
                     </div>
-                </div>
                 </a>
                 <!-- Login form on desktops -->
                 <form class="form-inline hidden-sm-down login_form">
@@ -102,18 +102,18 @@
                     <div class="square_header_card animated fadeInLeft">
                         <h3>Курьерам:</h3>
                         <ul class="header_card_adventure_list">
-                            <li class="header_card_adventure">Заказы рядом с Вами</li>
-                            <li class="header_card_adventure">Гибкий график работы</li>
-                            <li class="header_card_adventure">Своевременная оплата</li>
+                            <li class="header_card_adventure underlined_separator">Заказы рядом с Вами</li>
+                            <li class="header_card_adventure underlined_separator">Гибкий график работы</li>
+                            <li class="header_card_adventure underlined_separator">Своевременная оплата</li>
                         </ul>
                         <a class="btn btn_own btn--accent1" href="#">Стать курьером</a>
                     </div>
                     <div class="square_header_card animated fadeInRight">
                         <h3>Заказчикам:</h3>
                         <ul class="header_card_adventure_list">
-                            <li class="header_card_adventure">Самая низкая цена</li>
-                            <li class="header_card_adventure">Без лишних оформлений</li>
-                            <li class="header_card_adventure">Все виды доставок</li>
+                            <li class="header_card_adventure underlined_separator">Самая низкая цена</li>
+                            <li class="header_card_adventure underlined_separator">Без лишних оформлений</li>
+                            <li class="header_card_adventure underlined_separator">Все виды доставок</li>
                         </ul>
                         <a class="btn btn_own btn--accent2" href="#">Оформить доставку</a>
                     </div>
@@ -121,6 +121,39 @@
             </div>
         </div>
     </header>
+
+    <!-- Little section of security info -->
+    <section id="security">
+        <div class="container">
+            <div class="security_title">
+              <h2 class="underlined_separator light">Работай безопасно!</h2>
+              <img src="img/security_icon.png" alt=""><a href="#">Подробнее о безопасности сделки</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Customer bullets section -->
+    <section id="customer_bullets" class="top_border_section">
+        <div class="container">
+            <h2 class="light">Сервис глазами заказчика</h2>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="round_bullet">
+                    <h3>1.Разместите заявку</h3>
+                    <ul>
+                      <li class="underlined_separator">Укажите что нужно доставить</li>
+                      <li class="underlined_separator">Уточните дату доставки</li>
+                      <li class="underlined_separator">Укажите адреса доставки</li>
+                    </ul>
+                </div>
+                <div class="round_bullet">
+
+                </div>
+                <div class="round_bullet">
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Concatinated and minified scripts -->
     <script src="js/libs.min.js"></script>
