Some changes. Customers' bullets are done

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
                             <li class="header_card_adventure underlined_separator">Гибкий график работы</li>
                             <li class="header_card_adventure underlined_separator">Своевременная оплата</li>
                         </ul>
-                        <a class="btn btn_own btn--accent1" href="#">Стать курьером</a>
+                        <a class="btn btn_own btn--accent2" href="#">Стать курьером</a>
                     </div>
                     <div class="square_header_card animated fadeInRight">
                         <h3>Заказчикам:</h3>
@@ -115,7 +115,7 @@
                             <li class="header_card_adventure underlined_separator">Без лишних оформлений</li>
                             <li class="header_card_adventure underlined_separator">Все виды доставок</li>
                         </ul>
-                        <a class="btn btn_own btn--accent2" href="#">Оформить доставку</a>
+                        <a class="btn btn_own btn--accent1" href="#">Оформить доставку</a>
                     </div>
                 </div>
             </div>
@@ -146,10 +146,20 @@
                     </ul>
                 </div>
                 <div class="round_bullet">
-
+                    <h3>2.Получайте предложения</h3>
+                    <ul>
+                      <li class="underlined_separator">Курьеры предлагают свои услуги</li>
+                      <li class="underlined_separator">Вы поучаете уведомления</li>
+                      <li class="underlined_separator">Курьеры не видят Ваших контактов</li>
+                    </ul>
                 </div>
                 <div class="round_bullet">
-
+                    <h3>3.Выберите курьера</h3>
+                    <ul>
+                      <li class="underlined_separator">Сравниваете предложения курьеров</li>
+                      <li class="underlined_separator">Выбираете нужного курьера</li>
+                      <li class="underlined_separator">Выбираете исполнителем</li>
+                    </ul>
                 </div>
             </div>
         </div>
