--- a/src/index.html
+++ b/src/index.html
@@ -94,12 +94,12 @@
                 <!-- Main header title -->
                 <div class="row">
                     <div class="col-md-8 col-lg-6 offset-md-2 offset-lg-3">
-                        <h1 class="animated fadeInDown">удобный сервис для курьеров и заказчиков</h1>
+                        <h1 class="wow fadeInDown">удобный сервис для курьеров и заказчиков</h1>
                     </div>
                 </div>
                 <!-- Main header cards flex-row -->
                 <div class="d-flex flex-row justify-content-around flex-wrap header_card_row">
-                    <div class="square_header_card animated fadeInLeft">
+                    <div class="square_header_card wow fadeInLeft">
                         <h3>Курьерам:</h3>
                         <ul class="header_card_adventure_list">
                             <li class="header_card_adventure underlined_separator">Заказы рядом с Вами</li>
@@ -108,7 +108,7 @@
                         </ul>
                         <a class="btn btn_own btn--accent2" href="#">Стать курьером</a>
                     </div>
-                    <div class="square_header_card animated fadeInRight">
+                    <div class="square_header_card wow fadeInRight">
                         <h3>Заказчикам:</h3>
                         <ul class="header_card_adventure_list">
                             <li class="header_card_adventure underlined_separator">Самая низкая цена</li>
@@ -126,8 +126,8 @@
     <section id="security">
         <div class="container">
             <div class="security_title">
-              <h2 class="underlined_separator light">Работай безопасно!</h2>
-              <img src="img/security_icon.png" alt=""><a href="#">Подробнее о безопасности сделки</a>
+                <h2 class="underlined_separator light">Работай безопасно!</h2>
+                <img src="img/security_icon.png" alt=""><a href="#">Подробнее о безопасности сделки</a>
             </div>
         </div>
     </section>
@@ -137,28 +137,28 @@
         <div class="container">
             <h2 class="light">Сервис глазами заказчика</h2>
             <div class="d-flex justify-content-center flex-wrap">
-                <div class="round_bullet">
+                <div class="round_bullet wow fadeIn" data-wow-delay="1s">
                     <h3>1.Разместите заявку</h3>
                     <ul>
-                      <li class="underlined_separator">Укажите что нужно доставить</li>
-                      <li class="underlined_separator">Уточните дату доставки</li>
-                      <li class="underlined_separator">Укажите адреса доставки</li>
+                        <li class="underlined_separator">Укажите что нужно доставить</li>
+                        <li class="underlined_separator">Уточните дату доставки</li>
+                        <li class="underlined_separator">Укажите адреса доставки</li>
                     </ul>
                 </div>
-                <div class="round_bullet">
+                <div class="round_bullet wow fadeIn" data-wow-delay="1.5s">
                     <h3>2.Получайте предложения</h3>
                     <ul>
-                      <li class="underlined_separator">Курьеры предлагают свои услуги</li>
-                      <li class="underlined_separator">Вы поучаете уведомления</li>
-                      <li class="underlined_separator">Курьеры не видят Ваших контактов</li>
+                        <li class="underlined_separator">Курьеры предлагают свои услуги</li>
+                        <li class="underlined_separator">Вы поучаете уведомления</li>
+                        <li class="underlined_separator">Курьеры не видят Ваших контактов</li>
                     </ul>
                 </div>
-                <div class="round_bullet">
+                <div class="round_bullet wow fadeIn" data-wow-delay="2s">
                     <h3>3.Выберите курьера</h3>
                     <ul>
-                      <li class="underlined_separator">Сравниваете предложения курьеров</li>
-                      <li class="underlined_separator">Выбираете нужного курьера</li>
-                      <li class="underlined_separator">Выбираете исполнителем</li>
+                        <li class="underlined_separator">Сравниваете предложения курьеров</li>
+                        <li class="underlined_separator">Выбираете нужного курьера</li>
+                        <li class="underlined_separator">Выбираете исполнителем</li>
                     </ul>
                 </div>
             </div>
